--- a/app/globals.css
+++ b/app/globals.css
@@ -8,6 +8,7 @@
   }
 }
 
+/*  */
 .top-bar{
   background-color: #ffcc00;
   color: #000;
@@ -83,3 +84,37 @@
     @apply bg-background text-foreground;
   }
 }
+
+
+.menu {
+  display: flex;
+  flex-direction: column;
+  gap: 30px;
+  text-align: center;
+  justify-content: center;
+}
+
+.cards {
+  display: grid;
+  grid-template-columns: repeat(1, 1fr);
+  gap: 15px;
+}
+
+/* Hover FLip Card */
+.perspective {
+  perspective: 1000px;
+}
+.preserve-3d {
+  transform-style: preserve-3d;
+}
+.backface-hidden {
+  backface-visibility: hidden;
+  -webkit-backface-visibility: hidden;
+}
+.rotate-y-180 {
+  transform: rotateY(180deg);
+}
+.hover\:rotate-y-180:hover {
+  transform: rotateY(180deg);
+}
+
